@@ -37,7 +37,7 @@ class CleanUpPane(gtk.VBox):
         self.pack_start(self.clean_recently_used_document_button(),False)
         self.pack_start(self.clean_ailurus_cache_button(), False)
         self.pack_start(self.clean_nautilus_cache_button(), False)
-        if UBUNTU or MINT:
+        if UBUNTU or UBUNTU_DERIV:
             self.pack_start(self.clean_apt_cache_button(), False)
             self.pack_start(UbuntuCleanKernelBox(), False)
             hbox = gtk.HBox(True, 20)
